parser_A2/parser_2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CATCH
    CLASS
    DELETE
    DQUOTE
    HASHTAG
    NEW
    PRIVATE
    PROTECTED
    PUBLIC
    SQUOTE
    TEMPLATE

Grammar

Rule 0     S' -> program
Rule 1     program -> translation_unit
Rule 2     primary_expression -> IDENTIFIER
Rule 3     primary_expression -> NUMBER
Rule 4     primary_expression -> STRING_LITERAL
Rule 5     primary_expression -> SCHAR
Rule 6     primary_expression -> LRPAREN expression RRPAREN
Rule 7     postfix_expression -> primary_expression
Rule 8     postfix_expression -> postfix_expression LSPAREN expression RSPAREN
Rule 9     postfix_expression -> postfix_expression LRPAREN RRPAREN
Rule 10    postfix_expression -> postfix_expression LRPAREN argument_expression_list RRPAREN
Rule 11    postfix_expression -> postfix_expression DOT IDENTIFIER
Rule 12    postfix_expression -> postfix_expression PTR_OP IDENTIFIER
Rule 13    postfix_expression -> postfix_expression INC_OP
Rule 14    postfix_expression -> postfix_expression DEC_OP
Rule 15    argument_expression_list -> assignment_expression
Rule 16    argument_expression_list -> argument_expression_list COMMA assignment_expression
Rule 17    unary_expression -> postfix_expression
Rule 18    unary_expression -> INC_OP unary_expression
Rule 19    unary_expression -> DEC_OP unary_expression
Rule 20    unary_expression -> unary_operator cast_expression
Rule 21    unary_expression -> SIZEOF unary_expression
Rule 22    unary_expression -> SIZEOF LRPAREN type_name RRPAREN
Rule 23    unary_operator -> BANDOP
Rule 24    unary_operator -> MULTOP
Rule 25    unary_operator -> PLUSOP
Rule 26    unary_operator -> MINUSOP
Rule 27    unary_operator -> BNOP
Rule 28    unary_operator -> NOTSYM
Rule 29    cast_expression -> unary_expression
Rule 30    cast_expression -> LRPAREN type_name RRPAREN cast_expression
Rule 31    multiplicative_expression -> cast_expression
Rule 32    multiplicative_expression -> multiplicative_expression MULTOP cast_expression
Rule 33    multiplicative_expression -> multiplicative_expression DIVOP cast_expression
Rule 34    multiplicative_expression -> multiplicative_expression MODOP cast_expression
Rule 35    additive_expression -> multiplicative_expression
Rule 36    additive_expression -> additive_expression PLUSOP multiplicative_expression
Rule 37    additive_expression -> additive_expression MINUSOP multiplicative_expression
Rule 38    shift_expression -> additive_expression
Rule 39    shift_expression -> shift_expression LEFT_OP additive_expression
Rule 40    shift_expression -> shift_expression RIGHT_OP additive_expression
Rule 41    relational_expression -> shift_expression
Rule 42    relational_expression -> relational_expression LTCOMP shift_expression
Rule 43    relational_expression -> relational_expression GTCOMP shift_expression
Rule 44    relational_expression -> relational_expression LE_OP shift_expression
Rule 45    relational_expression -> relational_expression GE_OP shift_expression
Rule 46    equality_expression -> relational_expression
Rule 47    equality_expression -> equality_expression EQ_OP relational_expression
Rule 48    equality_expression -> equality_expression NE_OP relational_expression
Rule 49    and_expression -> equality_expression
Rule 50    and_expression -> and_expression BANDOP equality_expression
Rule 51    exclusive_or_expression -> and_expression
Rule 52    exclusive_or_expression -> exclusive_or_expression XOROP and_expression
Rule 53    inclusive_or_expression -> exclusive_or_expression
Rule 54    inclusive_or_expression -> inclusive_or_expression BOROP exclusive_or_expression
Rule 55    logical_and_expression -> inclusive_or_expression
Rule 56    logical_and_expression -> logical_and_expression AND_OP inclusive_or_expression
Rule 57    logical_or_expression -> logical_and_expression
Rule 58    logical_or_expression -> logical_or_expression OR_OP logical_and_expression
Rule 59    conditional_expression -> logical_or_expression
Rule 60    conditional_expression -> logical_or_expression QUESMARK expression COLON conditional_expression
Rule 61    assignment_expression -> conditional_expression
Rule 62    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 63    assignment_operator -> EQUAL
Rule 64    assignment_operator -> MUL_ASSIGN
Rule 65    assignment_operator -> DIV_ASSIGN
Rule 66    assignment_operator -> MOD_ASSIGN
Rule 67    assignment_operator -> ADD_ASSIGN
Rule 68    assignment_operator -> SUB_ASSIGN
Rule 69    assignment_operator -> LEFT_ASSIGN
Rule 70    assignment_operator -> RIGHT_ASSIGN
Rule 71    assignment_operator -> AND_ASSIGN
Rule 72    assignment_operator -> XOR_ASSIGN
Rule 73    assignment_operator -> OR_ASSIGN
Rule 74    expression -> assignment_expression
Rule 75    expression -> expression COMMA assignment_expression
Rule 76    constant_expression -> conditional_expression
Rule 77    declaration -> declaration_specifiers SEMICOLON
Rule 78    declaration -> declaration_specifiers init_declarator_list SEMICOLON
Rule 79    declaration_specifiers -> storage_class_specifier
Rule 80    declaration_specifiers -> storage_class_specifier declaration_specifiers
Rule 81    declaration_specifiers -> type_specifier
Rule 82    declaration_specifiers -> type_specifier declaration_specifiers
Rule 83    declaration_specifiers -> type_qualifier
Rule 84    declaration_specifiers -> type_qualifier declaration_specifiers
Rule 85    init_declarator_list -> init_declarator
Rule 86    init_declarator_list -> init_declarator_list COMMA init_declarator
Rule 87    init_declarator -> declarator
Rule 88    init_declarator -> declarator EQUAL initializer
Rule 89    storage_class_specifier -> TYPEDEF
Rule 90    storage_class_specifier -> EXTERN
Rule 91    storage_class_specifier -> STATIC
Rule 92    storage_class_specifier -> AUTO
Rule 93    storage_class_specifier -> REGISTER
Rule 94    type_specifier -> VOID
Rule 95    type_specifier -> CHAR
Rule 96    type_specifier -> SHORT
Rule 97    type_specifier -> INT
Rule 98    type_specifier -> LONG
Rule 99    type_specifier -> FLOAT
Rule 100   type_specifier -> DOUBLE
Rule 101   type_specifier -> SIGNED
Rule 102   type_specifier -> UNSIGNED
Rule 103   type_specifier -> struct_or_union_specifier
Rule 104   type_specifier -> enum_specifier
Rule 105   struct_or_union_specifier -> struct_or_union IDENTIFIER LCPAREN struct_declaration_list RCPAREN
Rule 106   struct_or_union_specifier -> struct_or_union LCPAREN struct_declaration_list RCPAREN
Rule 107   struct_or_union_specifier -> struct_or_union IDENTIFIER
Rule 108   struct_or_union -> STRUCT
Rule 109   struct_or_union -> UNION
Rule 110   struct_declaration_list -> struct_declaration
Rule 111   struct_declaration_list -> struct_declaration_list struct_declaration
Rule 112   struct_declaration -> specifier_qualifier_list struct_declarator_list SEMICOLON
Rule 113   specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 114   specifier_qualifier_list -> type_specifier
Rule 115   specifier_qualifier_list -> type_qualifier specifier_qualifier_list
Rule 116   specifier_qualifier_list -> type_qualifier
Rule 117   struct_declarator_list -> struct_declarator
Rule 118   struct_declarator_list -> struct_declarator_list COMMA struct_declarator
Rule 119   struct_declarator -> declarator
Rule 120   struct_declarator -> COLON constant_expression
Rule 121   struct_declarator -> declarator COLON constant_expression
Rule 122   enum_specifier -> ENUM LCPAREN enumerator_list RCPAREN
Rule 123   enum_specifier -> ENUM IDENTIFIER LCPAREN enumerator_list RCPAREN
Rule 124   enum_specifier -> ENUM IDENTIFIER
Rule 125   enumerator_list -> enumerator
Rule 126   enumerator_list -> enumerator_list COMMA enumerator
Rule 127   enumerator -> IDENTIFIER
Rule 128   enumerator -> IDENTIFIER EQUAL constant_expression
Rule 129   type_qualifier -> CONST
Rule 130   type_qualifier -> VOLATILE
Rule 131   declarator -> pointer direct_declarator
Rule 132   declarator -> direct_declarator
Rule 133   direct_declarator -> IDENTIFIER
Rule 134   direct_declarator -> LRPAREN declarator RRPAREN
Rule 135   direct_declarator -> direct_declarator LSPAREN constant_expression RSPAREN
Rule 136   direct_declarator -> direct_declarator LSPAREN RSPAREN
Rule 137   direct_declarator -> direct_declarator LRPAREN parameter_type_list RRPAREN
Rule 138   direct_declarator -> direct_declarator LRPAREN identifier_list RRPAREN
Rule 139   direct_declarator -> direct_declarator LRPAREN RRPAREN
Rule 140   pointer -> MULTOP
Rule 141   pointer -> MULTOP type_qualifier_list
Rule 142   pointer -> MULTOP pointer
Rule 143   pointer -> MULTOP type_qualifier_list pointer
Rule 144   type_qualifier_list -> type_qualifier
Rule 145   type_qualifier_list -> type_qualifier_list type_qualifier
Rule 146   parameter_type_list -> parameter_list
Rule 147   parameter_type_list -> parameter_list COMMA ELLIPSIS
Rule 148   parameter_list -> parameter_declaration
Rule 149   parameter_list -> parameter_list COMMA parameter_declaration
Rule 150   parameter_declaration -> declaration_specifiers declarator
Rule 151   parameter_declaration -> declaration_specifiers abstract_declarator
Rule 152   parameter_declaration -> declaration_specifiers
Rule 153   identifier_list -> IDENTIFIER
Rule 154   identifier_list -> identifier_list COMMA IDENTIFIER
Rule 155   type_name -> specifier_qualifier_list
Rule 156   type_name -> specifier_qualifier_list abstract_declarator
Rule 157   abstract_declarator -> pointer
Rule 158   abstract_declarator -> direct_abstract_declarator
Rule 159   abstract_declarator -> pointer direct_abstract_declarator
Rule 160   direct_abstract_declarator -> LRPAREN abstract_declarator RRPAREN
Rule 161   direct_abstract_declarator -> LSPAREN RSPAREN
Rule 162   direct_abstract_declarator -> LSPAREN constant_expression RSPAREN
Rule 163   direct_abstract_declarator -> direct_abstract_declarator LSPAREN RSPAREN
Rule 164   direct_abstract_declarator -> direct_abstract_declarator LSPAREN constant_expression RSPAREN
Rule 165   direct_abstract_declarator -> LRPAREN RRPAREN
Rule 166   direct_abstract_declarator -> LRPAREN parameter_type_list RRPAREN
Rule 167   direct_abstract_declarator -> direct_abstract_declarator LRPAREN RRPAREN
Rule 168   direct_abstract_declarator -> direct_abstract_declarator LRPAREN parameter_type_list RRPAREN
Rule 169   initializer -> assignment_expression
Rule 170   initializer -> LCPAREN initializer_list RCPAREN
Rule 171   initializer -> LCPAREN initializer_list COMMA RCPAREN
Rule 172   initializer_list -> initializer
Rule 173   initializer_list -> initializer_list COMMA initializer
Rule 174   statement -> labeled_statement
Rule 175   statement -> compound_statement
Rule 176   statement -> expression_statement
Rule 177   statement -> selection_statement
Rule 178   statement -> iteration_statement
Rule 179   statement -> jump_statement
Rule 180   labeled_statement -> IDENTIFIER COLON statement
Rule 181   labeled_statement -> CASE constant_expression COLON statement
Rule 182   labeled_statement -> DEFAULT COLON statement
Rule 183   compound_statement -> LCPAREN RCPAREN
Rule 184   compound_statement -> LCPAREN statement_list RCPAREN
Rule 185   compound_statement -> LCPAREN declaration_list RCPAREN
Rule 186   compound_statement -> LCPAREN declaration_list statement_list RCPAREN
Rule 187   declaration_list -> declaration
Rule 188   declaration_list -> declaration_list declaration
Rule 189   statement_list -> statement
Rule 190   statement_list -> statement_list statement
Rule 191   expression_statement -> SEMICOLON
Rule 192   expression_statement -> expression SEMICOLON
Rule 193   selection_statement -> IF LRPAREN expression RRPAREN statement
Rule 194   selection_statement -> IF LRPAREN expression RRPAREN statement ELSE statement
Rule 195   selection_statement -> SWITCH LRPAREN expression RRPAREN statement
Rule 196   iteration_statement -> WHILE LRPAREN expression RRPAREN statement
Rule 197   iteration_statement -> DO statement WHILE LRPAREN expression RRPAREN SEMICOLON
Rule 198   iteration_statement -> FOR LRPAREN expression_statement expression_statement RRPAREN statement
Rule 199   iteration_statement -> FOR LRPAREN expression_statement expression_statement expression RRPAREN statement
Rule 200   jump_statement -> GOTO IDENTIFIER SEMICOLON
Rule 201   jump_statement -> CONTINUE SEMICOLON
Rule 202   jump_statement -> BREAK SEMICOLON
Rule 203   jump_statement -> RETURN SEMICOLON
Rule 204   jump_statement -> RETURN expression SEMICOLON
Rule 205   translation_unit -> external_declaration
Rule 206   translation_unit -> translation_unit external_declaration
Rule 207   external_declaration -> function_definition
Rule 208   external_declaration -> declaration
Rule 209   function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 210   function_definition -> declaration_specifiers declarator compound_statement
Rule 211   function_definition -> declarator declaration_list compound_statement
Rule 212   function_definition -> declarator compound_statement

Terminals, with rules where they appear

ADD_ASSIGN           : 67
AND_ASSIGN           : 71
AND_OP               : 56
AUTO                 : 92
BANDOP               : 23 50
BNOP                 : 27
BOROP                : 54
BREAK                : 202
CASE                 : 181
CATCH                : 
CHAR                 : 95
CLASS                : 
COLON                : 60 120 121 180 181 182
COMMA                : 16 75 86 118 126 147 149 154 171 173
CONST                : 129
CONTINUE             : 201
DEC_OP               : 14 19
DEFAULT              : 182
DELETE               : 
DIVOP                : 33
DIV_ASSIGN           : 65
DO                   : 197
DOT                  : 11
DOUBLE               : 100
DQUOTE               : 
ELLIPSIS             : 147
ELSE                 : 194
ENUM                 : 122 123 124
EQUAL                : 63 88 128
EQ_OP                : 47
EXTERN               : 90
FLOAT                : 99
FOR                  : 198 199
GE_OP                : 45
GOTO                 : 200
GTCOMP               : 43
HASHTAG              : 
IDENTIFIER           : 2 11 12 105 107 123 124 127 128 133 153 154 180 200
IF                   : 193 194
INC_OP               : 13 18
INT                  : 97
LCPAREN              : 105 106 122 123 170 171 183 184 185 186
LEFT_ASSIGN          : 69
LEFT_OP              : 39
LE_OP                : 44
LONG                 : 98
LRPAREN              : 6 9 10 22 30 134 137 138 139 160 165 166 167 168 193 194 195 196 197 198 199
LSPAREN              : 8 135 136 161 162 163 164
LTCOMP               : 42
MINUSOP              : 26 37
MODOP                : 34
MOD_ASSIGN           : 66
MULTOP               : 24 32 140 141 142 143
MUL_ASSIGN           : 64
NEW                  : 
NE_OP                : 48
NOTSYM               : 28
NUMBER               : 3
OR_ASSIGN            : 73
OR_OP                : 58
PLUSOP               : 25 36
PRIVATE              : 
PROTECTED            : 
PTR_OP               : 12
PUBLIC               : 
QUESMARK             : 60
RCPAREN              : 105 106 122 123 170 171 183 184 185 186
REGISTER             : 93
RETURN               : 203 204
RIGHT_ASSIGN         : 70
RIGHT_OP             : 40
RRPAREN              : 6 9 10 22 30 134 137 138 139 160 165 166 167 168 193 194 195 196 197 198 199
RSPAREN              : 8 135 136 161 162 163 164
SCHAR                : 5
SEMICOLON            : 77 78 112 191 192 197 200 201 202 203 204
SHORT                : 96
SIGNED               : 101
SIZEOF               : 21 22
SQUOTE               : 
STATIC               : 91
STRING_LITERAL       : 4
STRUCT               : 108
SUB_ASSIGN           : 68
SWITCH               : 195
TEMPLATE             : 
TYPEDEF              : 89
UNION                : 109
UNSIGNED             : 102
VOID                 : 94
VOLATILE             : 130
WHILE                : 196 197
XOROP                : 52
XOR_ASSIGN           : 72
error                : 

Nonterminals, with rules where they appear

abstract_declarator  : 151 156 160
additive_expression  : 36 37 38 39 40
and_expression       : 50 51 52
argument_expression_list : 10 16
assignment_expression : 15 16 62 74 75 169
assignment_operator  : 62
cast_expression      : 20 30 31 32 33 34
compound_statement   : 175 209 210 211 212
conditional_expression : 60 61 76
constant_expression  : 120 121 128 135 162 164 181
declaration          : 187 188 208
declaration_list     : 185 186 188 209 211
declaration_specifiers : 77 78 80 82 84 150 151 152 209 210
declarator           : 87 88 119 121 134 150 209 210 211 212
direct_abstract_declarator : 158 159 163 164 167 168
direct_declarator    : 131 132 135 136 137 138 139
enum_specifier       : 104
enumerator           : 125 126
enumerator_list      : 122 123 126
equality_expression  : 47 48 49 50
exclusive_or_expression : 52 53 54
expression           : 6 8 60 75 192 193 194 195 196 197 199 204
expression_statement : 176 198 198 199 199
external_declaration : 205 206
function_definition  : 207
identifier_list      : 138 154
inclusive_or_expression : 54 55 56
init_declarator      : 85 86
init_declarator_list : 78 86
initializer          : 88 172 173
initializer_list     : 170 171 173
iteration_statement  : 178
jump_statement       : 179
labeled_statement    : 174
logical_and_expression : 56 57 58
logical_or_expression : 58 59 60
multiplicative_expression : 32 33 34 35 36 37
parameter_declaration : 148 149
parameter_list       : 146 147 149
parameter_type_list  : 137 166 168
pointer              : 131 142 143 157 159
postfix_expression   : 8 9 10 11 12 13 14 17
primary_expression   : 7
program              : 0
relational_expression : 42 43 44 45 46 47 48
selection_statement  : 177
shift_expression     : 39 40 41 42 43 44 45
specifier_qualifier_list : 112 113 115 155 156
statement            : 180 181 182 189 190 193 194 194 195 196 197 198 199
statement_list       : 184 186 190
storage_class_specifier : 79 80
struct_declaration   : 110 111
struct_declaration_list : 105 106 111
struct_declarator    : 117 118
struct_declarator_list : 112 118
struct_or_union      : 105 106 107
struct_or_union_specifier : 103
translation_unit     : 1 206
type_name            : 22 30
type_qualifier       : 83 84 115 116 144 145
type_qualifier_list  : 141 143 145
type_specifier       : 81 82 113 114
unary_expression     : 18 19 21 29 62
unary_operator       : 20

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . translation_unit
    (205) translation_unit -> . external_declaration
    (206) translation_unit -> . translation_unit external_declaration
    (207) external_declaration -> . function_definition
    (208) external_declaration -> . declaration
    (209) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (210) function_definition -> . declaration_specifiers declarator compound_statement
    (211) function_definition -> . declarator declaration_list compound_statement
    (212) function_definition -> . declarator compound_statement
    (77) declaration -> . declaration_specifiers SEMICOLON
    (78) declaration -> . declaration_specifiers init_declarator_list SEMICOLON
    (79) declaration_specifiers -> . storage_class_specifier
    (80) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (81) declaration_specifiers -> . type_specifier
    (82) declaration_specifiers -> . type_specifier declaration_specifiers
    (83) declaration_specifiers -> . type_qualifier
    (84) declaration_specifiers -> . type_qualifier declaration_specifiers
    (131) declarator -> . pointer direct_declarator
    (132) declarator -> . direct_declarator
    (89) storage_class_specifier -> . TYPEDEF
    (90) storage_class_specifier -> . EXTERN
    (91) storage_class_specifier -> . STATIC
    (92) storage_class_specifier -> . AUTO
    (93) storage_class_specifier -> . REGISTER
    (94) type_specifier -> . VOID
    (95) type_specifier -> . CHAR
    (96) type_specifier -> . SHORT
    (97) type_specifier -> . INT
    (98) type_specifier -> . LONG
    (99) type_specifier -> . FLOAT
    (100) type_specifier -> . DOUBLE
    (101) type_specifier -> . SIGNED
    (102) type_specifier -> . UNSIGNED
    (103) type_specifier -> . struct_or_union_specifier
    (104) type_specifier -> . enum_specifier
    (129) type_qualifier -> . CONST
    (130) type_qualifier -> . VOLATILE
    (140) pointer -> . MULTOP
    (141) pointer -> . MULTOP type_qualifier_list
    (142) pointer -> . MULTOP pointer
    (143) pointer -> . MULTOP type_qualifier_list pointer
    (133) direct_declarator -> . IDENTIFIER
    (134) direct_declarator -> . LRPAREN declarator RRPAREN
    (135) direct_declarator -> . direct_declarator LSPAREN constant_expression RSPAREN
    (136) direct_declarator -> . direct_declarator LSPAREN RSPAREN
    (137) direct_declarator -> . direct_declarator LRPAREN parameter_type_list RRPAREN
    (138) direct_declarator -> . direct_declarator LRPAREN identifier_list RRPAREN
    (139) direct_declarator -> . direct_declarator LRPAREN RRPAREN
    (105) struct_or_union_specifier -> . struct_or_union IDENTIFIER LCPAREN struct_declaration_list RCPAREN
    (106) struct_or_union_specifier -> . struct_or_union LCPAREN struct_declaration_list RCPAREN
    (107) struct_or_union_specifier -> . struct_or_union IDENTIFIER
    (122) enum_specifier -> . ENUM LCPAREN enumerator_list RCPAREN
    (123) enum_specifier -> . ENUM IDENTIFIER LCPAREN enumerator_list RCPAREN
    (124) enum_specifier -> . ENUM IDENTIFIER
    (108) struct_or_union -> . STRUCT
    (109) struct_or_union -> . UNION

    TYPEDEF         shift and go to state 13
    EXTERN          shift and go to state 14
    STATIC          shift and go to state 15
    AUTO            shift and go to state 16
    REGISTER        shift and go to state 17
    VOID            shift and go to state 18
    CHAR            shift and go to state 19
    SHORT           shift and go to state 20
    INT             shift and go to state 21
    LONG            shift and go to state 22
    FLOAT           shift and go to state 23
    DOUBLE          shift and go to state 24
    SIGNED          shift and go to state 25
    UNSIGNED        shift and go to state 26
    CONST           shift and go to state 29
    VOLATILE        shift and go to state 30
    MULTOP          shift and go to state 31
    IDENTIFIER      shift and go to state 32
    LRPAREN         shift and go to state 33
    ENUM            shift and go to state 35
    STRUCT          shift and go to state 36
    UNION           shift and go to state 37

    program                        shift and go to state 1
    translation_unit               shift and go to state 2
    external_declaration           shift and go to state 3
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    declaration_specifiers         shift and go to state 6
    declarator                     shift and go to state 7
    storage_class_specifier        shift and go to state 8
    type_specifier                 shift and go to state 9
    type_qualifier                 shift and go to state 10
    pointer                        shift and go to state 11
    direct_declarator              shift and go to state 12
    struct_or_union_specifier      shift and go to state 27
    enum_specifier                 shift and go to state 28
    struct_or_union                shift and go to state 34

state 1

    (0) S' -> program .



state 2

    (1) program -> translation_unit .
    (206) translation_unit -> translation_unit . external_declaration
    (207) external_declaration -> . function_definition
    (208) external_declaration -> . declaration
    (209) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (210) function_definition -> . declaration_specifiers declarator compound_statement
    (211) function_definition -> . declarator declaration_list compound_statement
    (212) function_definition -> . declarator compound_statement
    (77) declaration -> . declaration_specifiers SEMICOLON
    (78) declaration -> . declaration_specifiers init_declarator_list SEMICOLON
    (79) declaration_specifiers -> . storage_class_specifier
    (80) declaration_specifiers -> . storage_class_specifier declaration_specifiers
    (81) declaration_specifiers -> . type_specifier
    (82) declaration_specifiers -> . type_specifier declaration_specifiers
    (83) declaration_specifiers -> . type_qualifier
    (84) declaration_specifiers -> . type_qualifier declaration_specifiers
    (131) declarator -> . pointer direct_declarator
    (132) declarator -> . direct_declarator
    (89) storage_class_specifier -> . TYPEDEF
    (90) storage_class_specifier -> . EXTERN
    (91) storage_class_specifier -> . STATIC
    (92) storage_class_specifier -> . AUTO
    (93) storage_class_specifier -> . REGISTER
    (94) type_specifier -> . VOID
    (95) type_specifier -> . CHAR
    (96) type_specifier -> . SHORT
    (97) type_specifier -> . INT
    (98) type_specifier -> . LONG
    (99) type_specifier -> . FLOAT
    (100) type_specifier -> . DOUBLE
    (101) type_specifier -> . SIGNED
    (102) type_specifier -> . UNSIGNED
    (103) type_specifier -> . struct_or_union_specifier
    (104) type_specifier -> . enum_specifier
    (129) type_qualifier -> . CONST
    (130) type_qualifier -> . VOLATILE
    (140) pointer -> . MULTOP
    (141) pointer -> . MULTOP type_qualifier_list
    (142) pointer -> . MULTOP pointer
    (143) pointer -> . MULTOP type_qualifier_list pointer
    (133) direct_declarator -> . IDENTIFIER
    (134) direct_declarator -> . LRPAREN declarator RRPAREN
    (135) direct_declarator -> . direct_declarator LSPAREN constant_expression RSPAREN
    (136) direct_declarator -> . direct_declarator LSPAREN RSPAREN
    (137) direct_declarator -> . direct_declarator LRPAREN parameter_type_list RRPAREN
    (138) direct_declarator -> . direct_declarator LRPAREN identifier_list RRPAREN
    (139) direct_declarator -> . direct_declarator LRPAREN RRPAREN
    (105) struct_or_union_specifier -> . struct_or_union IDENTIFIER LCPAREN struct_declaration_list RCPAREN
    (106) struct_or_union_specifier -> . struct_or_union LCPAREN struct_declaration_list RCPAREN
    (107) struct_or_union_specifier -> . struct_or_union IDENTIFIER
    (122) enum_specifier -> . ENUM LCPAREN enumerator_list RCPAREN
    (123) enum_specifier -> . ENUM IDENTIFIER LCPAREN enumerator_list RCPAREN
    (124) enum_specifier -> . ENUM IDENTIFIER
    (108) struct_or_union -> . STRUCT
    (109) struct_or_union -> . UNION

    $end            reduce using rule 1 (program -> translation_unit .)
    TYPEDEF         shift and go to state 13
    EXTERN          shift and go to state 14
    STATIC          shift and go to state 15
    AUTO            shift and go to state 16
    REGISTER        shift and go to state 17
    VOID            shift and go to state 18
    CHAR            shift and go to state 19
    SHORT           shift and go to state 20
    INT             shift and go to state 21
    LONG            shift and go to state 22
    FLOAT           shift and go to state 23
    DOUBLE          shift and go to state 24
    SIGNED          shift and go to state 25
    UNSIGNED        shift and go to state 26
    CONST           shift and go to state 29
    VOLATILE        shift and go to state 30
    MULTOP          shift and go to state 31
    IDENTIFIER      shift and go to state 32
    LRPAREN         shift and go to state 33
    ENUM            shift and go to state 35
    STRUCT          shift and go to state 36
    UNION           shift and go to state 37

    external_declaration           shift and go to state 38
    function_definition            shift and go to state 4
    declaration                    shift and go to state 5
    declaration_specifiers         shift and go to state 6
    declarator                     shift and go to state 7
    storage_class_specifier        shift and go to state 8
    type_specifier                 shift and go to state 9
    type_qualifier                 shift and go to state 10
    pointer                        shift and go to state 11
    direct_declarator              shift and go to state 12
    struct_or_union_specifier      shift and go to state 27
    enum_specifier                 shift and go to state 28
    struct_or_union                shift and go to state 34

state 3

    (205) translation_unit -> external_declaration .

    TYPEDEF         reduce using rule 205 (translation_unit -> external_declaration .)
    EXTERN          reduce using rule 205 (translation_unit -> external_declaration .)
    STATIC          reduce using rule 205 (translation_unit -> external_declaration .)
    AUTO            reduce using rule 205 (translation_unit -> external_declaration .)
    REGISTER        reduce using rule 205 (translation_unit -> external_declaration .)
    VOID            reduce using rule 205 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 205 (translation_unit -> external_declaration .)
    SHORT           reduce using rule 205 (translation_unit -> external_declaration .)
    INT             reduce using rule 205 (translation_unit -> external_declaration .)
    LONG            reduce using rule 205 (translation_unit -> external_declaration .)
    FLOAT           reduce using rule 205 (translation_unit -> external_declaration .)
    DOUBLE          reduce using rule 205 (translation_unit -> external_declaration .)
    SIGNED          reduce using rule 205 (translation_unit -> external_declaration .)
    UNSIGNED        reduce using rule 205 (translation_unit -> external_declaration .)
    CONST           reduce using rule 205 (translation_unit -> external_declaration .)
    VOLATILE        reduce using rule 205 (translation_unit -> external_declaration .)
    MULTOP          reduce using rule 205 (translation_unit -> external_declaration .)
    IDENTIFIER      reduce using rule 205 (translation_unit -> external_declaration .)
    LRPAREN         reduce using rule 205 (translation_unit -> external_declaration .)
    ENUM            reduce using rule 205 (translation_unit -> external_declaration .)
    STRUCT          reduce using rule 205 (translation_unit -> external_declaration .)
    UNION           reduce using rule 205 (translation_unit -> external_declaration .)
    $end            reduce using rule 205 (translation_unit -> external_declaration .)


state 4

    (207) external_declaration -> function_definition .

    TYPEDEF         reduce using rule 207 (external_declaration -> function_definition .)
    EXTERN          reduce using rule 207 (external_declaration -> function_definition .)
    STATIC          reduce using rule 207 (external_declaration -> function_definition .)
    AUTO            reduce using rule 207 (external_declaration -> function_definition .)
    REGISTER        reduce using rule 207 (external_declaration -> function_definition .)
    VOID            reduce using rule 207 (external_declaration -> function_definition .)
    CHAR            reduce using rule 207 (external_declaration -> function_definition .)
    SHORT           reduce using rule 207 (external_declaration -> function_definition .)
    INT             reduce using rule 207 (external_declaration -> function_definition .)
    LONG            reduce using rule 207 (external_declaration -> function_definition .)
    FLOAT           reduce using rule 207 (external_declaration -> function_definition .)
    DOUBLE          reduce using rule 207 (external_declaration -> function_definition .)
    SIGNED          reduce using rule 207 (external_declaration -> function_definition .)
    UNSIGNED        reduce using rule 207 (external_declaration -> function_definition .)
    CONST           reduce using rule 207 (external_declaration -> function_definition .)
    VOLATILE        reduce using rule 207 (external_declaration -> function_definition .)
    MULTOP          reduce using rule 207 (external_declaration -> function_definition .)
    IDENTIFIER      reduce using rule 207 (external_declaration -> function_definition .)
    LRPAREN         reduce using rule 207 (external_declaration -> function_definition .)
    ENUM            reduce using rule 207 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 207 (external_declaration -> function_definition .)
    UNION           reduce using rule 207 (external_declaration -> function_definition .)
    $end            reduce using rule 207 (external_declaration -> function_definition .)


state 5

    (208) external_declaration -> declaration .

    TYPEDEF         reduce using rule 208 (external_declaration -> declaration .)
    EXTERN          reduce using rule 208 (external_declaration -> declaration .)
    STATIC          reduce using rule 208 (external_declaration -> declaration .)
    AUTO            reduce using rule 208 (external_declaration -> declaration .)
    REGISTER        reduce using rule 208 (external_declaration -> declaration .)
    VOID            reduce using rule 208 (external_declaration -> declaration .)
    CHAR            reduce using rule 208 (external_declaration -> declaration .)
    SHORT           reduce using rule 208 (external_declaration -> declaration .)
    INT             reduce using rule 208 (external_declaration -> declaration .)
    LONG            reduce using rule 208 (external_declaration -> declaration .)
    FLOAT           reduce using rule 208 (external_declaration -> declaration .)
    DOUBLE          reduce using rule 208 (external_declaration -> declaration .)
    SIGNED          reduce using rule 208 (external_declaration -> declaration .)
    UNSIGNED        reduce using rule 208 (external_declaration -> declaration .)
    CONST           reduce using rule 208 (external_declaration -> declaration .)
    VOLATILE        reduce using rule 208 (external_declaration -> declaration .)
    MULTOP          reduce using rule 208 (external_declaration -> declaration .)
    IDENTIFIER      reduce using rule 208 (external_declaration -> declaration .)
    LRPAREN         reduce using rule 208 (external_declaration -> declaration .)
    ENUM            reduce using rule 208 (external_declaration -> declaration .)
    STRUCT          reduce using rule 208 (external_declaration -> declaration .)
    UNION           reduce using rule 208 (external_declaration -> declaration .)
    $end            reduce using rule 208 (external_declaration -> declaration .)


state 6
